--- a/source/sass/blocks/company-item-bottom.scss
+++ b/source/sass/blocks/company-item-bottom.scss
@@ -1,4 +1,4 @@
-.company-item:nth-child(2) {
+.custom-charity {
     background-color: #ffffff;
     background-image:
         url('../img/hand-guitar-char.svg'),
