some fancy fixes

--- a/source/sass/blocks/company-item-top.scss
+++ b/source/sass/blocks/company-item-top.scss
@@ -79,7 +79,7 @@
             url('../img/hand-bike-vol.svg');
 
         background-position:
-            calc(50% - 286px) 1203px,
+            left calc(50% - 286px) bottom 50px,
             right -80px top 47px;
     }
 
