--- a/source/css/style.css
+++ b/source/css/style.css
@@ -27,6 +27,7 @@
   font-display: swap;
 }
 .body {
+  min-width: 375px;
   background-color: #F6F8FB;
 }
 
@@ -238,6 +239,10 @@ footer .footer__main-part .font_15 {
   text-decoration-line: underline;
   border: none;
   color: #E4002B;
+}
+
+.button-link--white {
+  color: #FFFFFF;
 }
 
 .TIZERS .index-block h2 {
@@ -711,7 +716,7 @@ footer .footer__main-part .font_15 {
 @media (max-width: 991px) {
   .index-block--padding-bottom-80 .company-item:first-child {
     background-image: url("../img/hand-trash-vol-mobile.svg"), url("../img/hand-bike-vol.svg");
-    background-position: calc(50% - 286px) 1203px, right -80px top 47px;
+    background-position: left calc(50% - 286px) bottom 50px, right -80px top 47px;
   }
 }
 @media (max-width: 690px) {
@@ -776,33 +781,56 @@ footer .footer__main-part .font_15 {
 }
 
 .company-item:nth-child(2) {
+  padding-top: 150px;
   background-color: #ffffff;
-  background-image: url("../img/hand-guitar-char.svg"), url("../img/hand-ball-char.svg");
-  background-repeat: no-repeat;
-  background-position: calc(50% + 250px) top, right bottom 60px;
+  background-image: url("../img/tear-charity.svg"), url("../img/hand-guitar-char.svg"), url("../img/hand-ball-char.svg");
+  background-repeat: repeat-x, no-repeat, no-repeat;
+  background-position: 50% 0, calc(50% + 250px) top, right bottom 60px;
 }
 @media (max-width: 991px) {
   .company-item:nth-child(2) {
     padding-bottom: 200px;
-    background-image: url("../img/hand-guitar-char-mobile.svg"), url("../img/hand-ball-char.svg");
-    background-position: left top 300px, right bottom 40px;
+    background-image: url("../img/tear-charity.svg"), url("../img/hand-guitar-char-mobile.svg"), url("../img/hand-ball-char.svg");
+    background-position: 50% 0, left top 300px, right bottom 40px;
   }
 }
 @media (max-width: 690px) {
   .company-item:nth-child(2) {
-    background-image: none;
+    background-image: url("../img/tear-charity.svg");
     padding-bottom: 40px;
   }
 }
 
-.index-block__btn-wrapper {
-  display: grid;
-  grid-template-columns: 196px 247px;
-  column-gap: 30px;
+.company-item:nth-child(2) .company-item__picture--static {
+  background-image: url("../img/charity.png") !important;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.07);
 }
-@media (max-width: 690px) {
-  .index-block__btn-wrapper {
-    grid-template-columns: 1fr;
+@media (min-width: 992px) {
+  .company-item:nth-child(2) .company-item__picture--static {
+    height: 452px;
   }
+}
+
+@media (min-width: 992px) {
+  #main .company-item__heading--LEFT {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: calc(50% + 70px);
+    width: calc(50% + 70px);
+  }
+}
+
+@media (min-width: 992px) {
+  #main .company-item__heading--LEFT > .sticky-block.flexbox--mb20-t991 {
+    padding-left: 80px;
+  }
+}
+
+.index-block__btn-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+.index-block__btn-wrapper > .index-block__btn:not(:last-child) {
+  margin-right: 42px;
 }
 /*# sourceMappingURL=style.css.map */
