--- a/source/sass/blocks/banner-cards.scss
+++ b/source/sass/blocks/banner-cards.scss
@@ -1,5 +1,5 @@
 //карточки-наши достижения
-.curtom-cards .banners-img-with-text-list__item-title a {
+.custom-cards .banners-img-with-text-list__item-title a {
     font-size: 26px;
     line-height: 33px;
     text-align: center;
@@ -17,7 +17,7 @@
     }
 }
 
-.curtom-cards .banners-img-with-text-list__wrapper:nth-child(3) .banners-img-with-text-list__item-title a {
+.custom-cards .banners-img-with-text-list__wrapper:nth-child(3) .banners-img-with-text-list__item-title a {
     color: #FFFFFF;
 
     @media (max-width: 690px) {
@@ -25,18 +25,18 @@
     }
 }
 
-.curtom-cards .banners-img-with-text-list__wrapper:nth-child(1) .banners-img-with-text-list__item-title a {
+.custom-cards .banners-img-with-text-list__wrapper:nth-child(1) .banners-img-with-text-list__item-title a {
     @media (max-width: 690px) {
         color: #FFFFFF;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 }
 
-.index-block .curtom-cards {
+.index-block .custom-cards {
     padding: 0;
 }
 
-.curtom-cards .grid-list--items-3 {
+.custom-cards .grid-list--items-3 {
     justify-items: center;
 
     @media (min-width: 744px) {
@@ -48,13 +48,13 @@
     }
 }
 
-.curtom-cards .grid-list__item {
+.custom-cards .grid-list__item {
     width: 100%;
     max-width: 335px;
     min-width: 225px;
 }
 
-.curtom-cards .banners-img-with-text-list__item-image {
+.custom-cards .banners-img-with-text-list__item-image {
     @media (min-width: 747px) {
         min-height: 218px;
     }
@@ -64,7 +64,7 @@
     }
 }
 
-.curtom-cards .banners-img-with-text-list__item-image.banners-img-with-text-list__item-image--short {
+.custom-cards .banners-img-with-text-list__item-image.banners-img-with-text-list__item-image--short {
     @media (max-width: 690px) {
         padding-top: 34%;
     }
@@ -74,49 +74,49 @@
     }
 }
 
-.curtom-cards .rounded-4 {
+.custom-cards .rounded-4 {
     border-radius: 20px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.07);
 }
 
-.curtom-cards .banners-img-with-text-list__wrapper .dark-block-after:after {
+.custom-cards .banners-img-with-text-list__wrapper .dark-block-after:after {
     background: none;
 }
 
-.curtom-cards .banners-img-with-text-list__wrapper:first-child .dark-block-after:after {
+.custom-cards .banners-img-with-text-list__wrapper:first-child .dark-block-after:after {
     background-image: linear-gradient(to top, #FFFFFF 1.87%, rgba(255, 255, 255, 0) 98.61%);
 }
 
-.curtom-cards .banners-img-with-text-list__wrapper .dark-block-after:after {
+.custom-cards .banners-img-with-text-list__wrapper .dark-block-after:after {
     @media (max-width: 690px) {
         top: 0;
         bottom: -30px;
     }
 }
 
-.curtom-cards .banners-img-with-text-list__wrapper:first-child .dark-block-after:after {
+.custom-cards .banners-img-with-text-list__wrapper:first-child .dark-block-after:after {
     @media (max-width: 690px) {
         background-image: linear-gradient(to top, #000000 1.87%, rgba(255, 255, 255, 0) 98.61%);
     }
 }
 
-.curtom-cards .banners-img-with-text-list__wrapper:nth-child(2) .dark-block-after:after {
+.custom-cards .banners-img-with-text-list__wrapper:nth-child(2) .dark-block-after:after {
     @media (max-width: 690px) {
         background-image: linear-gradient(to top, #FFFFFF 1.87%, rgba(255, 255, 255, 0) 98.61%);
     }
 }
 
-.curtom-cards .banners-img-with-text-list__wrapper:nth-child(3) .dark-block-after:after {
+.custom-cards .banners-img-with-text-list__wrapper:nth-child(3) .dark-block-after:after {
     @media (max-width: 690px) {
         background-image: linear-gradient(to top, #C5A56C 0.4%, rgba(197, 165, 108, 0) 100.17%);
     }
 }
 
-.curtom-cards .banners-img-with-text-list__item-text {
+.custom-cards .banners-img-with-text-list__item-text {
     padding: 18px 16px 0;
 }
 
-.curtom-cards .elements-count-3 .banners-img-with-text-list__item-text--absolute {
+.custom-cards .elements-count-3 .banners-img-with-text-list__item-text--absolute {
     bottom: 19px;
 
     @media (max-width: 690px) {
@@ -124,7 +124,7 @@
     }
 }
 
-.MIDDLE_ADV .curtom-cards .mobile-scrolled.mobile-scrolled--items-2 {
+.MIDDLE_ADV .custom-cards .mobile-scrolled.mobile-scrolled--items-2 {
     @media (max-width: 690px) {
         grid-template-columns: 1fr;
 
