--- a/source/sass/blocks/tizer-bottom.scss
+++ b/source/sass/blocks/tizer-bottom.scss
@@ -1,6 +1,6 @@
 //блок с заботой о природе
 //заголовок
-.nature {
+.custom-nature {
     &:not(#id) {
         padding-top: 124px;
         padding-bottom: 162px;
@@ -72,7 +72,7 @@
     }
 }
 
-.nature h2 {
+.custom-nature h2 {
     font-size: 38px;
     font-weight: 900;
     line-height: 48px;
@@ -102,7 +102,7 @@
 }
 
 //расположение
-.nature .tizers-list__items-wrapper.grid-list {
+.custom-nature .tizers-list__items-wrapper.grid-list {
     grid-template-columns: repeat(3, 1fr);
     gap: 56px;
     padding-right: 34px;
@@ -132,7 +132,7 @@
 }
 
 //иконки
-.nature .tizers-list__item-text-wrapper::before {
+.custom-nature .tizers-list__item-text-wrapper::before {
     content:"";
     width: 60px;
     height: 62px;
@@ -141,14 +141,14 @@
     margin-bottom: 25px;
 }
 
-.nature .tizers-list__item-wrapper:first-child .tizers-list__item-text-wrapper::before {
+.custom-nature .tizers-list__item-wrapper:first-child .tizers-list__item-text-wrapper::before {
     background-image: url("../img/icon1.svg");
 }
 
-.nature .tizers-list__item-wrapper:nth-child(2) .tizers-list__item-text-wrapper::before {
+.custom-nature .tizers-list__item-wrapper:nth-child(2) .tizers-list__item-text-wrapper::before {
     background-image: url("../img/icon2.svg");
 }
 
-.nature .tizers-list__item-wrapper:nth-child(3) .tizers-list__item-text-wrapper::before {
+.custom-nature .tizers-list__item-wrapper:nth-child(3) .tizers-list__item-text-wrapper::before {
     background-image: url("../img/icon3.svg");
 }
