--- a/source/sass/blocks/tizer-bottom.scss
+++ b/source/sass/blocks/tizer-bottom.scss
@@ -92,7 +92,7 @@
 }
 
 //подзаголовки
-.tizers-list__item-name.switcher-title {
+.custom-nature .tizers-list__item-name.switcher-title {
     font-family: 'KFC Condensed';
     font-size: 24px;
     font-weight: 900;
